Invalidate the previous caret location when editing text nodes.

Previously we would miss this invalidation.

BUG=603389

Review-Url: https://codereview.chromium.org/1931513003
Cr-Commit-Position: refs/heads/master@{#390982}

Former-commit-id: c8811f690116723cd62bb57ff6e3ff046bc3de42