third_party/WebKit/Source/core/dom/Document.cpp
@@ -3862,6 +3862,12 @@ void Document::nodeWillBeRemoved(Node& n)
     }
 }
 
+void Document::dataWillChange(const CharacterData& characterData)
+{
+    if (LocalFrame* frame = this->frame())
+        frame->selection().dataWillChange(characterData);
+}
+
 void Document::didInsertText(Node* text, unsigned offset, unsigned length)
 {
     for (Range* range : m_ranges)
